--- a/bin/src/main/resources/application.properties
+++ b/bin/src/main/resources/application.properties
@@ -5,8 +5,7 @@ server.port=8080
 spring.datasource.driver-class-name=com.microsoft.sqlserver.jdbc.SQLServerDriver
 spring.datasource.url=jdbc:sqlserver://localhost:1433;databaseName=finaldemo;trustServerCertificate=true
 spring.datasource.username=sa
-spring.datasource.password=cw11223025
-
+spring.datasource.password=1234
 
 # jpa config
 spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.SQLServer2016Dialect
