--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -10,8 +10,8 @@ spring.datasource.password=1234
 
 # jpa config
 spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.SQLServer2016Dialect
-#spring.jpa.show-sql=true
-#spring.jpa.properties.hibernate.format_sql=true
+spring.jpa.show-sql=true
+spring.jpa.properties.hibernate.format_sql=true
 
 # turn off ddl-auto in final project
 spring.jpa.hibernate.ddl-auto=update
