--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -33,11 +33,11 @@ spring.servlet.multipart.max-request-size=3MB
 # =================================
 spring.mail.default-encoding=UTF-8
 # Gmail SMTP
-spring.mail.host=smtp-mail.outlook.com
+spring.mail.host=smtp.gmail.com
 # TLS , port 587
 spring.mail.port=587
-spring.mail.username=eeit14719@outlook.com
-spring.mail.password=ymch0842
+spring.mail.username=dack00925@gmail.com
+spring.mail.password=poijzdmhmpiegjbh
 
 # Other properties
 spring.mail.properties.mail.smtp.auth=true
