--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -43,3 +43,7 @@ spring.mail.password=ymch0842
 spring.mail.properties.mail.smtp.auth=true
 spring.mail.properties.mail.smtp.starttls.enable=true
 spring.mail.properties.mail.smtp.starttls.required=true
+
+
+server.servlet.session.cookie.same-site=none
+server.servlet.session.cookie.secure=true
